--- a/Pru2/WebContent/WEB-INF/web.xml
+++ b/Pru2/WebContent/WEB-INF/web.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<display-name>Pru2</display-name>
-	<servlet>
- 	<description>Valida Inicio y Cierre de Sesión</description>
- 	<display-name>ValidarUsuario</display-name>
- 	<servlet-name>ValidarUsuario</servlet-name>
- 	<servlet-class>servlets.ValidarUsuario</servlet-class>
+<web-app id="WebApp_ID" version="2.4"
+ xmlns="http://java.sun.com/xml/ns/j2ee"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+ <display-name>Pru2</display-name>
+ <listener>
+  <listener-class>listeners.WebAppListener</listener-class>
+ </listener>
+ <servlet>
+  <description>Valida Inicio y Cierre de Sesión</description>
+  <display-name>ValidarUsuario</display-name>
+  <servlet-name>ValidarUsuario</servlet-name>
+  <servlet-class>servlets.ValidarUsuario</servlet-class>
  </servlet>
  <servlet-mapping>
- 	<servlet-name>ValidarUsuario</servlet-name>
- 	<url-pattern>/ValidarUsuario</url-pattern>
+  <servlet-name>ValidarUsuario</servlet-name>
+  <url-pattern>/ValidarUsuario</url-pattern>
  </servlet-mapping>
  <session-config>
   <session-timeout>30</session-timeout>
