--- a/Pru2/WebContent/WEB-INF/web.xml
+++ b/Pru2/WebContent/WEB-INF/web.xml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.4"
- xmlns="http://java.sun.com/xml/ns/j2ee"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
- <display-name>Pru2</display-name>
- <listener>
-  <listener-class>listeners.WebAppListener</listener-class>
- </listener>
- <servlet>
-  <description>Valida Inicio y Cierre de Sesión</description>
-  <display-name>ValidarUsuario</display-name>
-  <servlet-name>ValidarUsuario</servlet-name>
-  <servlet-class>servlets.ValidarUsuario</servlet-class>
- </servlet>
- <servlet-mapping>
-  <servlet-name>ValidarUsuario</servlet-name>
-  <url-pattern>/ValidarUsuario</url-pattern>
- </servlet-mapping>
- <session-config>
-  <session-timeout>30</session-timeout>
- </session-config>
- <welcome-file-list>
-  <welcome-file>index.jsp</welcome-file>
- </welcome-file-list>
+	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+	<display-name>Pru2</display-name>
+	<listener>
+		<listener-class>listeners.WebAppListener</listener-class>
+	</listener>
+	<listener>
+		<listener-class>listeners.WebAppSessionListener</listener-class>
+	</listener>
+	<servlet>
+		<description>Valida Inicio y Cierre de Sesión</description>
+		<display-name>ValidarUsuario</display-name>
+		<servlet-name>ValidarUsuario</servlet-name>
+		<servlet-class>servlets.ValidarUsuario</servlet-class>
+	</servlet>
+	
+	<servlet>
+    	<description>AppVersion</description>
+    	<display-name>AppVersion</display-name>
+    	<servlet-name>AppVersion</servlet-name>
+    	<servlet-class>servlets.AppVersion</servlet-class>
+    </servlet>
+    
+	<servlet-mapping>
+		<servlet-name>ValidarUsuario</servlet-name>
+		<url-pattern>/ValidarUsuario</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AppVersion</servlet-name>
+		<url-pattern>/AppVersion</url-pattern>
+	</servlet-mapping>
+	<session-config>
+		<session-timeout>3</session-timeout>
+	</session-config>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
